VANITYS30: Refactor ProductUserRelation and related classes to remove reviewId; update methods and tests accordingly